--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -19,6 +19,10 @@
 .movie-grid{
     grid-column: 1/3;
     grid-row: 2/4;
+    display: grid;
+    flex-direction: row;
+     grid-template-columns: repeat(6, 1fr); 
+  gap: 20px;
 }
 
 .search-input{
