--- a/frontend/src/css/MovieCard.css
+++ b/frontend/src/css/MovieCard.css
@@ -12,6 +12,8 @@
   margin-left: 10px;
   font-family: "poppins";
   font-size: 14px;
+  max-height: 500px;
+  margin-bottom: 2vh;
 }
 .movie-card p {
   font-size: 12px;
@@ -32,17 +34,30 @@
   pointer-events: auto;
 
 }
+.movie-card:hover img{
+  transform: scale(1.1);
+}
 
 /* movie poster*/
 
 .movie-poster {
   width: 100%;
-  height: 300px;
+  min-height: 80%;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: rgb(124, 124, 124);
   position: relative;
+  overflow: hidden;
+}
+
+.movie-poster img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  transition: transform 0.5s ease;
+  display: block;
 }
 
 /* movie overlay */
@@ -82,7 +97,7 @@
 /* movie infos*/
 .movie-info {
   width: 100%;
-  height: 100px;
+  min-height: 20%;
   display: flex;
   flex-direction: column;
   align-items: left;
